fix: positioning of bullets in ProjectsComponent ul on tablet

--- a/src/app/projects/projects.component.less
+++ b/src/app/projects/projects.component.less
@@ -45,6 +45,7 @@
 		}
 		.job {
 			ul {
+				list-style-position: inside;
 				list-style-type: none;
 				padding-left: 0;
 				@media (min-device-width: 701px) and (max-device-width: 1000px) {
